# BlackJack

./: Baralho.c  CMakeLists.txt  CMakePresets.json  makefile  test_fichas.c
BlackJack/: CMakeLists.txt
BlackJack/includes/: Baralho.h
BlackJack/src/: Baralho.c  main.c
src/: Baralho.c  Baralho.h  Fichas.c  Fichas.h  Jogador.c  Jogador.h  Partida.c  Partida.h  Regras.c  Regras.h  executar_testes.bat  main.c  test_baralho.c  test_jogador.c  test_regras.c
